src/objects/Accounting_BillingContactInfo__c.object
<CustomObject>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CommCareHQ</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>CommCareHQ India</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>accountid__c</fullName>
        <externalId>true</externalId>
        <label>accountid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company_name__c</fullName>
        <label>company_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>emails__c</fullName>
        <label>emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_line__c</fullName>
        <label>first_line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>first_name__c</fullName>
        <label>first_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>last_name__c</fullName>
        <label>last_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phone_number__c</fullName>
        <label>phone_number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postal_code__c</fullName>
        <label>postal_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>second_line__c</fullName>
        <label>second_line</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state_province_region__c</fullName>
        <label>state_province_region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting_BillingContactInfo</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Contact #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_BillingContactInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>